# zinc

./: .gitignore  Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  RFC-001.md  bench.sh  bench.zig  build-all.sh  build.rs  build.zig  bun_server.ts  deno.json  deno_client.ts  ffi.rs  flat_msg.test.ts  flat_msg.ts  index.d.ts  index.ts  integration_sim.mjs  lib.rs  mod.ts  node_client.mjs  package.json  pool.test.mjs  pool.ts  ring_buffer.zig  ring_test.zig  rpc.ts  run-demo.sh  security.test.mjs  security.ts  tsconfig.json  uipc.h
bun-ffi/: index.ts
core/: bench.zig  build.zig  ring_buffer.zig  ring_test.zig  uipc.h
deno-plugin/: mod.ts
examples/: bun_server.ts  deno_client.ts  node_client.mjs
examples/quickstart/: client.ts  server.ts
node-addon/: index.d.ts  package.json
node-addon/src/: ffi.rs  lib.rs
protocol/: flat_msg.ts  pool.ts  rpc.ts  security.ts
scripts/: bench.sh  build-all.sh  run-demo.sh
src/: channel.ts  index.ts  runtime.ts  types.ts
src/adapters/: node.ts
tests/: flat_msg.test.ts  flat_msg_node.mjs  integration_sim.mjs  pool.test.mjs  security.test.mjs
