[package]
name        = "uipc-node"
version     = "0.1.0"
edition     = "2021"
description = "Universal IPC Bridge — Node.js N-API addon"
license     = "MIT"

[lib]
crate-type = ["cdylib"]
name       = "uipc_node"

[dependencies]
napi        = { version = "2.16", features = ["napi8", "async"] }
napi-derive = "2.16"
libc        = "0.2"
crc32fast   = "1.4"
thiserror   = "1.0"
parking_lot = "0.12"

[build-dependencies]
napi-build  = "2.1"

[profile.release]
opt-level = 3
lto       = "fat"
codegen-units = 1
panic     = "abort"
strip     = true
